Actually fixed clipped features images in Features page header, margin was too conservative last time

--- a/LESS/featStyle.less
+++ b/LESS/featStyle.less
@@ -38,11 +38,11 @@ html, body {
   align-items: center;
 
   .features1 {
-    margin-top: 10px;
+    margin-top: 40px;
   }
 
   .features2 {
-    margin-top: 10px;
+    margin-top: 45px;
   }
 }
 
